compiler/testData/diagnostics/tests/enum/enumMissedComma.kt
enum class MyEnum {
    A, B, <!ENUM_ENTRY_USES_DEPRECATED_OR_NO_DELIMITER!>C<!> D, <!ENUM_ENTRY_USES_DEPRECATED_OR_NO_DELIMITER!>E<!> F
}